[tool.poetry]
name = "memes_pipeline"
version = "0.1.0"
description = ""
authors = ["Jack <jack.carlson@ntrepidcorp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ImageHash = "3.5"
tensorflow = "2.4.1"
sklearn = "^0.0"
numpy = "^1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
